CloudWatch monitoring.tf
resource "aws_instance" "ec2_instance" {
  ...
  monitoring = true # Enable detailed CloudWatch monitoring
  ...
}
